--- a/src/igotugui/igotugui.ui
+++ b/src/igotugui/igotugui.ui
@@ -31,10 +31,10 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>Tracker</string>
     </property>
-    <addaction name="actionConnect"/>
-    <addaction name="actionSaveAs"/>
+    <addaction name="actionInfo"/>
+    <addaction name="actionSave"/>
     <addaction name="separator"/>
     <addaction name="actionPreferences"/>
     <addaction name="separator"/>
@@ -49,7 +49,19 @@
    <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionInfo"/>
+   <addaction name="actionSave"/>
+  </widget>
   <action name="actionQuit">
    <property name="text">
     <string>Quit</string>
@@ -57,7 +69,10 @@
   </action>
   <action name="actionAbout">
    <property name="text">
-    <string>About</string>
+    <string>About Igotu2gpx</string>
+   </property>
+   <property name="toolTip">
+    <string>About Igotu2gpx</string>
    </property>
   </action>
   <action name="actionPreferences">
@@ -65,20 +80,17 @@
     <string>Preferences...</string>
    </property>
   </action>
-  <action name="actionConnect">
+  <action name="actionInfo">
    <property name="text">
-    <string>Connect</string>
-   </property>
-   <property name="menuRole">
-    <enum>QAction::ApplicationSpecificRole</enum>
+    <string>Info</string>
    </property>
   </action>
-  <action name="actionSaveAs">
+  <action name="actionSave">
    <property name="text">
-    <string>Save As...</string>
+    <string>Save...</string>
    </property>
-   <property name="menuRole">
-    <enum>QAction::ApplicationSpecificRole</enum>
+   <property name="toolTip">
+    <string>Save</string>
    </property>
   </action>
  </widget>
