--- a/src/igotugui/igotugui.ui
+++ b/src/igotugui/igotugui.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
-  <property name="geometry">
+ <widget class="QMainWindow" name="MainWindow" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,87 +9,113 @@
     <height>309</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>igotu2gpx</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+  <widget class="QWidget" name="centralwidget" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>60</y>
+     <width>428</width>
+     <height>249</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout" >
     <item>
-     <widget class="QTextBrowser" name="textBrowser"/>
+     <widget class="QTextBrowser" name="textBrowser" />
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
+  <widget class="QMenuBar" name="menubar" >
+   <property name="geometry" >
     <rect>
      <x>0</x>
      <y>0</y>
      <width>428</width>
-     <height>25</height>
+     <height>27</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
+   <widget class="QMenu" name="menuFile" >
+    <property name="title" >
      <string>Tracker</string>
     </property>
-    <addaction name="actionInfo"/>
-    <addaction name="actionSave"/>
-    <addaction name="separator"/>
-    <addaction name="actionPreferences"/>
-    <addaction name="separator"/>
-    <addaction name="actionQuit"/>
+    <addaction name="actionInfo" />
+    <addaction name="actionSave" />
+    <addaction name="actionPurge" />
+    <addaction name="separator" />
+    <addaction name="actionPreferences" />
+    <addaction name="separator" />
+    <addaction name="actionQuit" />
    </widget>
-   <widget class="QMenu" name="menuHelp">
-    <property name="title">
+   <widget class="QMenu" name="menuHelp" >
+    <property name="title" >
      <string>Help</string>
     </property>
-    <addaction name="actionAbout"/>
+    <addaction name="actionAbout" />
    </widget>
-   <addaction name="menuFile"/>
-   <addaction name="menuHelp"/>
+   <addaction name="menuFile" />
+   <addaction name="menuHelp" />
   </widget>
-  <widget class="QToolBar" name="toolBar">
-   <property name="windowTitle">
+  <widget class="QToolBar" name="toolBar" >
+   <property name="geometry" >
+    <rect>
+     <x>0</x>
+     <y>27</y>
+     <width>428</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <property name="windowTitle" >
     <string>toolBar</string>
    </property>
-   <attribute name="toolBarArea">
+   <property name="movable" >
+    <bool>false</bool>
+   </property>
+   <attribute name="toolBarArea" >
     <enum>TopToolBarArea</enum>
    </attribute>
-   <attribute name="toolBarBreak">
+   <attribute name="toolBarBreak" >
     <bool>false</bool>
    </attribute>
-   <addaction name="actionInfo"/>
-   <addaction name="actionSave"/>
+   <addaction name="actionInfo" />
+   <addaction name="actionSave" />
+   <addaction name="actionPurge" />
   </widget>
-  <action name="actionQuit">
-   <property name="text">
+  <action name="actionQuit" >
+   <property name="text" >
     <string>Quit</string>
    </property>
   </action>
-  <action name="actionAbout">
-   <property name="text">
+  <action name="actionAbout" >
+   <property name="text" >
     <string>About igotu2gpx</string>
    </property>
-   <property name="toolTip">
+   <property name="toolTip" >
     <string>About igotu2gpx</string>
    </property>
   </action>
-  <action name="actionPreferences">
-   <property name="text">
+  <action name="actionPreferences" >
+   <property name="text" >
     <string>Preferences...</string>
    </property>
   </action>
-  <action name="actionInfo">
-   <property name="text">
+  <action name="actionInfo" >
+   <property name="text" >
     <string>Info</string>
    </property>
   </action>
-  <action name="actionSave">
-   <property name="text">
+  <action name="actionSave" >
+   <property name="text" >
     <string>Save...</string>
    </property>
-   <property name="toolTip">
+   <property name="toolTip" >
     <string>Save</string>
+   </property>
+  </action>
+  <action name="actionPurge" >
+   <property name="text" >
+    <string>Purge...</string>
    </property>
   </action>
  </widget>
