--- a/src/igotugui/preferencesdialog.ui
+++ b/src/igotugui/preferencesdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>509</width>
-    <height>114</height>
+    <height>147</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,6 +33,16 @@
       <item row="0" column="1">
        <widget class="QLineEdit" name="device"/>
       </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Time zone offset from UTC</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="utcOffset"/>
+      </item>
      </layout>
     </widget>
    </item>
@@ -46,6 +56,7 @@
   </layout>
  </widget>
  <tabstops>
+  <tabstop>device</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
@@ -57,8 +68,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>257</x>
-     <y>185</y>
+     <x>266</x>
+     <y>299</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -73,8 +84,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>325</x>
-     <y>185</y>
+     <x>334</x>
+     <y>299</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
