--- a/src/igotugui/igotugui.ui
+++ b/src/igotugui/igotugui.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>igotu2gpx</string>
+   <string>Igotu2gpx</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -19,7 +19,7 @@
      <number>0</number>
     </property>
     <item>
-     <widget class="Marble::MarbleWidget" name="tracks" native="true"/>
+     <widget class="QWidget" name="tracks" native="true"/>
     </item>
    </layout>
   </widget>
@@ -29,7 +29,7 @@
      <x>0</x>
      <y>0</y>
      <width>819</width>
-     <height>27</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -49,6 +49,7 @@
     <property name="title">
      <string>Help</string>
     </property>
+    <addaction name="actionAboutPlugins"/>
     <addaction name="actionAbout"/>
    </widget>
    <addaction name="menuFile"/>
@@ -104,10 +105,10 @@
   </action>
   <action name="actionAbout">
    <property name="text">
-    <string>About igotu2gpx</string>
+    <string>About Igotu2gpx</string>
    </property>
    <property name="toolTip">
-    <string>About igotu2gpx</string>
+    <string>About Igotu2gpx</string>
    </property>
   </action>
   <action name="actionPreferences">
@@ -147,15 +148,12 @@
     <string>Cancel any connection with the GPS tracker</string>
    </property>
   </action>
+  <action name="actionAboutPlugins">
+   <property name="text">
+    <string>About Plugins</string>
+   </property>
+  </action>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>Marble::MarbleWidget</class>
-   <extends>QWidget</extends>
-   <header location="global">marble/MarbleWidget.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
