--- a/src/igotugui/igotugui.ui
+++ b/src/igotugui/igotugui.ui
@@ -13,14 +13,11 @@
   <property name="windowTitle">
    <string>Igotu2gpx</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <property name="margin">
      <number>0</number>
     </property>
-    <item>
-     <widget class="QWidget" name="tracks" native="true"/>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
