--- a/src/igotugui/igotugui.ui
+++ b/src/igotugui/igotugui.ui
@@ -26,7 +26,7 @@
      <x>0</x>
      <y>0</y>
      <width>819</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -46,6 +46,7 @@
     <property name="title">
      <string>Help</string>
     </property>
+    <addaction name="actionDebug"/>
     <addaction name="actionAboutPlugins"/>
     <addaction name="actionAbout"/>
    </widget>
@@ -148,6 +149,17 @@
   <action name="actionAboutPlugins">
    <property name="text">
     <string>About Plugins</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::ApplicationSpecificRole</enum>
+   </property>
+  </action>
+  <action name="actionDebug">
+   <property name="text">
+    <string>Debug information</string>
+   </property>
+   <property name="toolTip">
+    <string>Debug Information</string>
    </property>
   </action>
  </widget>
