--- a/src/igotugui/preferencesdialog.ui
+++ b/src/igotugui/preferencesdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>509</width>
-    <height>147</height>
+    <height>180</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,8 +22,11 @@
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="label">
+        <property name="toolTip">
+         <string>usb:&lt;vendor&gt;:&lt;device&gt; or serial:&lt;n&gt;</string>
+        </property>
         <property name="text">
-         <string>Device (usb:&lt;vendor&gt;:&lt;device&gt; or serial:&lt;n&gt;)</string>
+         <string>Device:</string>
         </property>
         <property name="buddy">
          <cstring>device</cstring>
@@ -36,12 +39,28 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Time zone offset from UTC</string>
+         <string>Time zone offset from UTC:</string>
+        </property>
+        <property name="buddy">
+         <cstring>utcOffset</cstring>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QComboBox" name="utcOffset"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Notify if a new version is available:</string>
+        </property>
+        <property name="buddy">
+         <cstring>update</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QComboBox" name="update"/>
       </item>
      </layout>
     </widget>
@@ -57,6 +76,8 @@
  </widget>
  <tabstops>
   <tabstop>device</tabstop>
+  <tabstop>utcOffset</tabstop>
+  <tabstop>update</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
@@ -68,12 +89,12 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>266</x>
-     <y>299</y>
+     <x>275</x>
+     <y>170</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
-     <y>194</y>
+     <y>179</y>
     </hint>
    </hints>
   </connection>
@@ -84,12 +105,12 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>334</x>
-     <y>299</y>
+     <x>343</x>
+     <y>170</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
-     <y>194</y>
+     <y>179</y>
     </hint>
    </hints>
   </connection>
