--- a/src/igotugui/igotugui.ui
+++ b/src/igotugui/igotugui.ui
@@ -31,7 +31,7 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>&amp;GPS-Tracker</string>
+     <string>&amp;GPS Tracker</string>
     </property>
     <addaction name="actionReload"/>
     <addaction name="actionPurge"/>
