--- a/src/igotugui/preferencesdialog.ui
+++ b/src/igotugui/preferencesdialog.ui
@@ -39,7 +39,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Time zone offset from UTC:</string>
+         <string>Time zone:</string>
         </property>
         <property name="buddy">
          <cstring>utcOffset</cstring>
