--- a/src/igotugui/preferencesdialog.ui
+++ b/src/igotugui/preferencesdialog.ui
@@ -49,7 +49,7 @@
       <item row="1" column="1">
        <widget class="QComboBox" name="utcOffset"/>
       </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Notify if a new version is available:</string>
@@ -59,8 +59,21 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="3" column="1">
        <widget class="QComboBox" name="update"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Group exported trackpoints into:</string>
+        </property>
+        <property name="buddy">
+         <cstring>tracksAsSegments</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QComboBox" name="tracksAsSegments"/>
       </item>
      </layout>
     </widget>
@@ -77,6 +90,7 @@
  <tabstops>
   <tabstop>device</tabstop>
   <tabstop>utcOffset</tabstop>
+  <tabstop>tracksAsSegments</tabstop>
   <tabstop>update</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
