--- a/src/igotugui/preferencesdialog.ui
+++ b/src/igotugui/preferencesdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>509</width>
-    <height>180</height>
+    <height>219</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -75,6 +75,19 @@
       <item row="2" column="1">
        <widget class="QComboBox" name="tracksAsSegments"/>
       </item>
+      <item row="4" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
      </layout>
     </widget>
    </item>
@@ -103,8 +116,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>275</x>
-     <y>170</y>
+     <x>284</x>
+     <y>203</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -119,8 +132,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>343</x>
-     <y>170</y>
+     <x>352</x>
+     <y>203</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
