--- a/src/igotugui/configurationdialog.ui
+++ b/src/igotugui/configurationdialog.ui
@@ -25,6 +25,9 @@
      </item>
      <item row="0" column="1">
       <widget class="QTimeEdit" name="interval">
+       <property name="currentSection">
+        <enum>QDateTimeEdit::SecondSection</enum>
+       </property>
        <property name="displayFormat">
         <string>mm:ss</string>
        </property>
@@ -77,6 +80,9 @@
       <widget class="QTimeEdit" name="changedInterval">
        <property name="enabled">
         <bool>false</bool>
+       </property>
+       <property name="currentSection">
+        <enum>QDateTimeEdit::SecondSection</enum>
        </property>
        <property name="displayFormat">
         <string>mm:ss</string>
